Version 0.83->0.84
UserPreferencesDialog.properties
====================================
New:
priorityUpAction.Action.text=
priorityUpAction.Action.shortDescription=Set higher plugin priority
priorityUpAction.Action.smallIcon=${iconsPath}priority_up.gif
priorityDownAction.Action.text=
priorityDownAction.Action.shortDescription=Set lower plugin priority
priorityDownAction.Action.smallIcon=${iconsPath}priority_down.gif

checkboxPluginIsActive.text=Plugin is active
checkboxUpdatePlugins.text=Make updates of this plugin
checkboxClipboardMonitoring.text=Enable plugin for Clipboard monitoring
labelAuthor.text=Author:
labelVersion.text=Version:
labelServices.text=Services:
labelPriority.text=Priority:
labelMaxConnections.text=Max connections:


Changed:
-----------
was:
pluginTableColumns_list=X|U|Plugin ID|Version|Service|Author|WWW
new:
pluginTableColumns_list=X|U|C|Plugin ID|Version|Service|Author|Max Downloads|Priority|WWW


DownloadNewPluginsTask.properties
====================================
New:
pluginsDirectoryIsNotWriteable=Target plugins directory is not writable.You cannot download plugins.\nIf FreeRapid's directory is placed in 'Program files' directory then run FRD as an administrator or place FreeRapid into another directory.



Version 0.82->0.83
MainApp.properties
==============================
Changed:
-----------
Was:
errorInvalidJRE=This application cannot be started with JRE 1.6.0_0 on Linux.\nThis JRE version is buggy therefore FRD wouldn't work properly.\nUpgrade to newer version.\nExiting.
New:
errorInvalidJRE=This application cannot be started with JRE 1.6.0_0.\nThis JRE version is buggy therefore FRD wouldn't work properly.\nUpgrade to newer version.\nExiting.


ErrorDialog.properties
===============================
Added:
errorMessageMacOSXBug=Call to Steve Jobs... MacOSX bug :-(....

NewLinksDialog.properties
===============================
Added:
btnSelectPathAction.description=Open directory chooser


ConnectDialog.properties