@@ -160,6 +160,11 @@ removeCompletedAction.Action.shortDescription = Remove all completed downloads
 removeCompletedAction.Action.smallIcon=${iconsPath}clean.png
 #removeCompletedAction.Action.largeIcon=${iconsPath}cancel.png
 
+removeCompletedAndDeletedAction.Action.text=Remove Completed Links and De&leted Files
+removeCompletedAndDeletedAction.Action.accelerator =shortcut L
+removeCompletedAndDeletedAction.Action.shortDescription = Remove all completed downloads whose files do not exist
+removeCompletedAndDeletedAction.Action.smallIcon=${iconsPath}clean.png
+
 selectAllAction.Action.text=Select &All
 selectAllAction.Action.accelerator =shortcut A
 selectAllAction.Action.shortDescription = Select All Downloads
